tests/toml/fail_external/fail_external.snap
---
source: tests/lib.rs
---
exit_code = 101
stdout = ''
stderr = '''
error: function main directly contains 1 unjustified call to annotated unsafe functions, but is not annotated unsafe
 --> src/main.rs:5:1
  |
5 | fn main() {
  | ^^^^^^^^^
  |
  = note: reachable from [*main*]
note: std::thread::sleep is called here
 --> src/main.rs:6:5
  |
6 |     thread::sleep(Duration::from_millis(100));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `toml_fail_external` (bin "toml_fail_external") due to 1 previous error
'''
